Fixed pop up not showing in chart.html, and added overlay(blur background while pop up is open)

--- a/styles/style.css
+++ b/styles/style.css
@@ -338,6 +338,23 @@ input[type='number'] {
   margin-bottom: 10px;
 }
 
+.overlay {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(20, 24, 30, 0.6);
+  backdrop-filter: blur(10px);
+  z-index: 99;
+  position: fixed;
+  top: 0;
+  opacity: 0;
+  pointer-events: none;
+  transition: 300ms all ease;
+}
+
+.overlay.active {
+  opacity: 1;
+}
+
 .transaction-list {
   padding: 3.5rem;
   width: 70vw;
